# haive-prebuilt

./: .gitignore  .readthedocs.yaml  README.md  organize_problem_files.py  pyproject.toml  pyrightconfig.json.disabled  pytest.ini
.github/workflows/: ci.yml  docs.yml  publish.yml
.trunk/: .gitignore  trunk.yaml
archive/: README.md
archive/company_researcher/: models.py
archive/journalism/: models.py  state.py  tools.py
archive/perplexity/: engines.py
archive/scientific_paper_agent/: nodes.py
archive/search_and_summarize/: tools.py
archive/startup/: agent.py  models.py
archive/systemic_review/: nodes.py
archive/tldr2/: tools.py
archive/weather_disaster/: agent.py
docs/source/: agent_catalog.rst  changelog.rst  conf.py  getting_started.rst  index.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst  layout.html  page.html
docs/source/_templates/sidebar/: brand.html
examples/: GALLERY_HEADER.rst  README.md
examples/haive/prebuilt/ai_insight/: example.py
examples/haive/prebuilt/search_and_summarize/: example.py
src/haive/prebuilt/: README.md  __init__.py  __init__.py.backup  arxiv_agent.py  github_agent.py  gmail_agent.py  reflection.py  translator_agent.py  weather_agent.py  wolfram_alpha_agent.py
src/haive/prebuilt/academic_task_learning/: README.md  __init__.py
src/haive/prebuilt/ai_insight/: README.md  __init__.py  agent.py  example.py  models.py  prompts.py  state.py  tools.py
src/haive/prebuilt/blog_writer_agent/: README.md  __init__.py
src/haive/prebuilt/car_buyer_agent/: README.md  __init__.py
src/haive/prebuilt/career_assistant/: README.md  __init__.py
src/haive/prebuilt/chiron_learning_agent/: README.md  __init__.py
src/haive/prebuilt/clause_ai/: README.md  __init__.py
src/haive/prebuilt/company_researcher/: README.md  __init__.py  agent.py  config.py  engines.py  models.py  models.py.agent1_backup  models.py.backup_0  models.py.bak_syntax  state.py  state.py.backup_7fixes  utils.py  utils.py.agent1_backup  utils.py.backup_0
src/haive/prebuilt/constituional_agent/: README.md  __init__.py  config.py  utils.py  utils.py.backup_0  utils.py.backup_1  utils.py.backup_7fixes
src/haive/prebuilt/content/: __init__.py  document_extractor.py  kg_creator.py  qa_for_rag.py  qa_gen.py  summarizer.py  tagger.py
src/haive/prebuilt/content_intelligence/: README.md  __init__.py
src/haive/prebuilt/contract_analysis/: README.md  __init__.py  agent.py  aug_llms.py  models.py  state.py
src/haive/prebuilt/customer_support/: README.md  __init__.py
src/haive/prebuilt/db_discovery/: README.md  __init__.py
src/haive/prebuilt/e2e_testing/: __init__.py
src/haive/prebuilt/essay_grading/: README.md  __init__.py  agent.py  nodes.py  state.py
src/haive/prebuilt/eu_green_compliance/: README.md  __init__.py
src/haive/prebuilt/general/: __init__.py  planner.py
src/haive/prebuilt/gif_generator/: README.md  __init__.py
src/haive/prebuilt/graph_inspector/: README.md  __init__.py
src/haive/prebuilt/gtla/: README.md  __init__.py  models.py
src/haive/prebuilt/journalism_/: __init__.py  engines.py  models.py  models.py.agent1_backup  models.py.backup_0  models.py.bak_syntax  prompts.py  state.py  state.py.agent1_backup  state.py.backup_0  state.py.bak_syntax  tools.py  tools.py.agent1_backup  tools.py.backup_0  tools.py.backup_1  tools.py.bak_syntax2
src/haive/prebuilt/memory_agent/: README.md  __init__.py
src/haive/prebuilt/misc/: README.md  __init__.py  agent_utilities_models.py  agent_utilities_prompts.py
src/haive/prebuilt/open_researcher/: README.md  __init__.py  models.py  prompts.py  state.py
src/haive/prebuilt/people_researcher/: README.md  __init__.py
src/haive/prebuilt/perplexity/: README.md  __init__.py
src/haive/prebuilt/podcast_generator/: README.md  __init__.py  agent.py  nodes.py  prompts.py  state.py
src/haive/prebuilt/project_manager/: README.md  __init__.py  agent.py  aug_llms.py  models.py  state.py
src/haive/prebuilt/prompt_writing/: __init__.py  system_prompt_writer.py  (+2 more)
src/haive_prebuilt/academic_task_learning/: __init__.py
src/haive_prebuilt/ai_insight/: __init__.py
src/haive_prebuilt/blog_writer_agent/: __init__.py
src/haive_prebuilt/career_assistant/: __init__.py
src/haive_prebuilt/clause_ai/: __init__.py
src/haive_prebuilt/company_researcher/: agent.py  config.py  engines.py  models.py  state.py  utils.py
src/haive_prebuilt/content/: document_extractor.py  qa_for_rag.py  summarizer.py  tagger.py
src/haive_prebuilt/contract_analysis/: README.md  agent.py  aug_llms.py  models.py  state.py
src/haive_prebuilt/db_discovery/: __init__.py
src/haive_prebuilt/e2e_testing/: __init__.py
src/haive_prebuilt/essay_grading/: __init__.py  agent.py  nodes.py  state.py
src/haive_prebuilt/graph_inspector/: __init__.py
src/haive_prebuilt/gtla/: README.md  models.py
src/haive_prebuilt/journalism_/: state.py
src/haive_prebuilt/memory_agent/: __init__.py
src/haive_prebuilt/open_researcher/: models.py  state.py
src/haive_prebuilt/podcast_generator/: agent.py  nodes.py  prompts.py  state.py
src/haive_prebuilt/project_manager/: README.md  agent.py  aug_llms.py  models.py  state.py
src/haive_prebuilt/query/: models.py  query_batch.py  query_decomposer.py  query_enhance.py  query_intent.py  query_rewriter.py  query_to_sql.py  query_type_detector.py
src/haive_prebuilt/sales_call_analyzer/: __init__.py
src/haive_prebuilt/scientific_paper_agent/: __init__.py  agent.py  models.py  state.py  tools.py  utils.py
src/haive_prebuilt/self_improving/: __init__.py
src/haive_prebuilt/shop_genie/: __init__.py
src/haive_prebuilt/systemic_review_of_scientific_articles/: __init__.py  agent.py  models.py  prompts.py  state.py  tools.py
src/haive_prebuilt/taskifier/: agent.py  state.py
src/haive_prebuilt/tldr2/: agent.py  models.py  state.py
src/haive_prebuilt/tts_poem_gen/: __init__.py
src/haive_prebuilt/weather_disaster_management/: agent.py  branches.py  config.py  engines.py  models.py  prompts.py  state.py
tests/: __init__.py  conftest.py  test_basic.py
(+154 files in other folders)
