[tool.poetry]
name = "haive-prebuilt"
version = "0.1.0"
description = "haive-prebuilt for Haive framework"
authors = ["pr1m8 <william.astley@algebraicwealth.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "haive", from = "src" }]
[tool.poetry.dependencies]
haive-core = { path = "../haive-core", develop = true }
haive-agents = { path = "../haive-agents", develop = true }
python = ">=3.12,<3.13"
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-core = "^0.3.44"
langgraph = "^0.3.5"
langdetect = "^1.0.9"
fast-langdetect = "^0.3.2"
langid = "^1.1.6"
# gcld3 = "^3.0.13"  # Commented out - requires system dependencies
pyspellchecker = "^0.8.2"

[tool.poetry.group.dev.dependencies]
haive-core = { path = "../haive-core", develop = true }
haive-agents = { path = "../haive-agents", develop = true }
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
cython = "^3.1.0"


[tool.poetry.group.constitutional-agent.dependencies]
profanity-check = "^1.0.3"
better-profanity = "^0.7.0"
profanityfilter = "^2.1.0"
pygments = "^2.19.1"
pyspellchecker = "^0.8.2"

[tool.poetry.group.docs.dependencies]
# Documentation dependencies
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"
sphinx-autodoc-typehints = "^3.1.0"
furo = "^2024.8.6"
myst-parser = "^4.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx-design = "^0.6.1"
sphinx-tabs = "^3.4.5"
sphinx-inline-tabs = "^2023.4.21"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-blockdiag = "^3.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-codeautolink = "^0.17.0"
sphinx-exec-code = "^0.16"
sphinx-runpython = "^0.4.0"
sphinx-sitemap = "^2.6.0"
sphinx-last-updated-by-git = "^0.3.8"
sphinxext-opengraph = "^0.10.0"
sphinx-reredirects = "^1.0.0"
sphinx-favicon = "^1.0.1"
sphinxemoji = "^0.3.1"
sphinx-tippy = "^0.4.3"
enum-tools = "^0.13.0"
sphinx-toolbox = "^3.8.1"
seed-intersphinx-mapping = "^1.2.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# 📦 AutoImport Configuration for Namespaced Poly Repo
[tool.autoimport]
# Disable moving to top to preserve existing structure
disable_move_to_top = false

# Common statements for haive namespace - THESE SHOULD BE SPECIFIC IMPORTS
[tool.autoimport.common_statements]
# Core haive imports - BE SPECIFIC!
"AugLLMConfig" = "from haive.core.engine.aug_llm import AugLLMConfig"
"Agent" = "from haive.core.agent import Agent"
"BaseModel" = "from pydantic import BaseModel"
"Field" = "from pydantic import Field"
"StateSchema" = "from haive.core.schema import StateSchema"
"MessagesState" = "from haive.core.schema.prebuilt.messages_state import MessagesState"

# Common type imports
"Optional" = "from typing import Optional"
"List" = "from typing import List"
"Dict" = "from typing import Dict"
"Any" = "from typing import Any"
"Union" = "from typing import Union"
"Literal" = "from typing import Literal"

# LangChain common imports
"ChatPromptTemplate" = "from langchain_core.prompts import ChatPromptTemplate"
"HumanMessage" = "from langchain_core.messages import HumanMessage"
"AIMessage" = "from langchain_core.messages import AIMessage"
"SystemMessage" = "from langchain_core.messages import SystemMessage"
"tool" = "from langchain_core.tools import tool"
"END" = "from langgraph.graph import END"
"START" = "from langgraph.graph import START"

# Common Python patterns
"datetime" = "from datetime import datetime"
"Path" = "from pathlib import Path"
"logging" = "import logging"
"os" = "import os"
"sys" = "import sys"
"json" = "import json"

# Ruff Configuration
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enforce absolute imports and other rules
select = ["E", "W", "F", "I", "TID251", "TID252"]
ignore = ["E501"]

[tool.isort]
profile = "black"
known_first_party = ["haive"]
known_third_party = ["langchain", "langchain_core", "langgraph", "pydantic"]
force_single_line = false
combine_as_imports = true
lines_after_imports = 2
